--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.28.0
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.2.2
-xgboost==1.7.5
-matplotlib==3.7.1
-seaborn==0.12.2
-requests==2.28.2
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=2.0.0
+scikit-learn>=1.4.0
+xgboost>=2.0.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+requests>=2.31.0
